Fix tests projects for Java 17