@@ -7,7 +7,10 @@ subprojects {
     apply plugin: "application"
     apply plugin: "org.springframework.boot"
 
-    mainClassName = "org.joinfaces.test.JoinfacesTestApplication"
+    application {
+        mainClass = "org.joinfaces.test.JoinfacesTestApplication"
+        applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
+    }
 
     dependencies {
         implementation project(":joinfaces-security-taglib")
